Fixing text overflow bug when dragging / changing the page

--- a/defi-react-app/src/components/about/About.css
+++ b/defi-react-app/src/components/about/About.css
@@ -26,7 +26,7 @@
     justify-content: space-between;
 
     background-color: #000;
-    height: 390px;
+    height: 100%;
 
     padding: 3rem 2rem;
     border: 1px solid #e7e8ea;
